# aura

./: .clippy.toml  .dockerignore  .env.example  .env.example_new  .env.example_old  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE_PROCESS.md  api.Dockerfile  backfiller.Dockerfile  blockbuster  build-all.sh  cliff.toml  docker-compose.yaml  ingester.Dockerfile  init.sql  init_migration_table.sql  init_sqlite.sql  init_sqlite_indexes.sql  init_v2.sql  init_v3.sql  integrity_verification.Dockerfile  migrate_tasks_to_bytea.sql  migrator.Dockerfile  openrpc.json  rustfmt.toml  skaffold.yaml
backfill_rpc/: Cargo.toml
backfill_rpc/src/: block_producer.rs  lib.rs  rpc.rs  slots_collector.rs
blockbuster/: Cargo.toml
blockbuster/src/: error.rs  instruction.rs  program_handler.rs
blockbuster/tests/: bubblegum_parser_test.rs  helpers.rs  instructions_test.rs
consistency_check/: Cargo.toml  README.md
consistency_check/src/: lib.rs  main.rs
digital_asset_types/: Cargo.toml
digital_asset_types/tests/: common.rs  get_asset_by_id.rs  get_assets_by_creator.rs  get_assets_by_group.rs  get_assets_by_owner.rs  json_parsing.rs
entities/: Cargo.toml
entities/src/: api_req_params.rs  asset_generated.rs  enums.rs  lib.rs  mappers.rs  models.rs  rollup.rs  schedule.rs  transaction_converters.rs  utils.rs
grpc/: Cargo.toml  build.rs
grpc/proto/: asset_urls.proto  consistency_api.proto  gap_filler.proto
grpc/src/: asseturls.rs  asseturls_impl.rs  client.rs  consistencyapi.rs  consistencyapi_impl.rs  gapfiller.rs  lib.rs  mapper.rs  service.rs
ingegrity_verification/: Cargo.toml
ingegrity_verification/src/: error.rs  main.rs
integration_tests/: Cargo.toml  README.md  run_postgres.sh
integration_tests/src/: account_update_tests.rs  cnft_tests.rs  common.rs  general_scenario_tests.rs  lib.rs  management_api_tests.rs  mpl_core_tests.rs  regular_nft_tests.rs  synchronizer_tests.rs  token_tests.rs
integrity_verification/: Cargo.toml
integrity_verification/src/: api.rs  config.rs  diff_checker.rs  error.rs  file_keys_fetcher.rs  main.rs  params.rs  requests.rs  slots_dumper.rs
interface/: Cargo.toml
interface/src/: account_balance.rs  api.rs  assert_urls.rs  asset_sigratures.rs  asset_streaming_and_discovery.rs  aura_peers_provides.rs  batch_mint.rs  checksums_storage.rs  consistency_check.rs  error.rs  finalized_slot_getter.rs  fork_cleaner.rs  json.rs  json_metadata.rs  lib.rs  message_handler.rs  migration_version_manager.rs  price_fetcher.rs  processing_possibility.rs  proofs.rs  rollup.rs  schedules.rs  sequence_consistent.rs  sequesce_consistent.rs  signature_persistence.rs  slot_getter.rs  slots_dumper.rs  solana_rpc.rs  token_accounts.rs  unprocessed_data_getter.rs
metrics_utils/: Cargo.toml
metrics_utils/src/: errors.rs  lib.rs  red.rs  utils.rs
nft_ingester/: Cargo.toml  docker-compose_db.yml  readme.md
nft_ingester/benches/: ingester_benchmark.rs  integrated_benchmark.rs  synchronizer_benchmark.rs
nft_ingester/cleaners/: fork_cleaner.rs
nft_ingester/doc/: backfiller.md
nft_ingester/scripts/: run_api.bash  run_comparer.bash  run_ingester.bash  run_migrator.bash  run_rocks_migrator.bash  run_tree_backfiller.bash  transfer_redis_messages.py
nft_ingester/src/: accounts_processor.rs  ack.rs  asset_fixer.rs  backfiller.rs  bubblegum_updates_processor.rs  buffer.rs  config.rs  consistency_bg_job.rs  consistency_calculator.rs  consts.rs  db_v2.rs  flatbuffer_mapper.rs  fork_cleaner.rs  gapfiller.rs  index_synchronizer.rs  index_syncronizer.rs  init.rs  inmemory_slots_dumper.rs  inscription_raw_parsing.rs  inscriptions_processor.rs  json_downloader.rs  json_migrator.rs  json_worker.rs  lib.rs  message_handler.rs  message_parser.rs  mpl_core_fee_indexing_processor.rs  mpl_core_processor.rs  mplx_updates_processor.rs  plerkle.rs  price_fetcher.rs  processors.rs  raydium_price_fetcher.rs  redis_receiver.rs  rocks_db.rs  rollup.rs  rollup_processor.rs  scheduler.rs  sequence_consistent.rs  solana_slot_service.rs  (+5 more)
nft_ingester/tests/: api_tests.rs  asset_previews_tests.rs  backfill_tests.rs  batch_mint_test.rs  bubblegum_tests.rs  clean_forks_test.rs  consistency_bg_job_test.rs  consistency_calculator_test.rs  decompress.rs  dump_tests.rs  gapfiller_tests.rs  price_fetch_test.rs  process_accounts.rs  rollup_test.rs  rpc_tests.rs  scheduler_tests.rs  sequence_consistent_tests.rs
postgre-client/: Cargo.toml
postgre-client/src/: asset_filter_client.rs  asset_index_client.rs  batch_mints.rs  converters.rs  core_fees.rs  error.rs  integrity_verification_client.rs  lib.rs  load_client.rs  migration_manager.rs  model.rs  rollups.rs  sqlite_client.rs  storage_traits.rs  tasks.rs  temp_index_client.rs
postgre-client/tests/: asset_filter_client_test.rs  asset_index_client_test.rs  db_setup.rs  json_tasks_test.rs  migration_manager.rs  readme.md
rocks-db/: Cargo.toml
rocks-db/benches/: dump_benchmark.rs  misc_benchmark.rs
rocks-db/src/: asset.rs  asset_client.rs  asset_previews.rs  asset_signatures.rs  asset_streaming_client.rs  backup_service.rs  batch_client.rs  batch_mint.rs  batch_savers.rs  bubblegum_slots.rs  cl_items.rs  client.rs  column.rs  column_migrator.rs  core_fees.rs  data_model.md  dump_client.rs  editions.rs  errors.rs  fork_cleaner.rs  inscriptions.rs  key_encoders.rs  leaf_signatures.rs  lib.rs  mappers.rs  migrator.rs  offchain_data.rs  parameters.rs  processing_possibility.rs  raw_block.rs  raw_block_legacy.rs  raw_blocks_streaming_client.rs  rollup.rs  schedule.rs  sequence_consistent.rs  signature_client.rs  slots_dumper.rs  storage_consistency.rs  storage_traits.rs  token_accounts.rs  (+4 more)
rocks-db/tests/: asset_streaming_client_tests.rs  batch_client_integration_tests.rs  dump_tests.rs  migration_tests.rs  parameters_tests.rs  raw_block_tests.rs  setup.rs  signature_client_tests.rs  storage_consistency_test.rs  urls_to_download_test.rs
tests/acc_forwarder/: Cargo.toml
tests/load_generation/: Cargo.toml
tests/setup/: Cargo.toml
usecase/: Cargo.toml
usecase/src/: asset_streamer.rs  (+14 more)
(+547 files in other folders)
