[workspace]
resolver = "2"
members = [
  "nft_ingester",
  "metrics_utils",
  "rocks-db",
  "postgre-client",
  "entities",
  "grpc",
  "interface",
  "usecase",
  "tests/setup",
  "backfill_rpc",
  "integrity_verification",
  "integration_tests",
  "consistency_check"]

[workspace.dependencies]

# Tokio ecosystem
tokio = { version = "1.43", features = ["full", "tracing"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tokio-retry = "0.3"


# Serde ecosystem and seryalization tools
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
serde_with = "3.7"
flatbuffers = "23.1"
plerkle_serialization = "1.9"
plerkle_messenger = { version = "1.9", features = ['redis'] }
borsh = "~0.10.3"


# Database infrastructure
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }
redis = { version = "0.22", features = ["aio", "tokio-comp", "streams", "tokio-native-tls-comp"] }
sqlx = { version = "0.6", features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "offline", "json", "chrono"] }
uuid = { version = "1.6", features = ["v4"] }


# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "ansi"] }
env_logger = "0.10"


# Testing and benchmarking
mockall = "0.13"
assert-json-diff = "2.0"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
criterion = "0.5"
prometheus-client = "0.21"
pprof = { version = "0.13", features = ["_protobuf", "protobuf-codec"] }
function_name = "0.3"
insta = "1.34"
serial_test = "2.0"


# HTTP, RPC and Schemas
hyper = { version = "0.14", features = ["server"] }
jsonrpc-http-server = { version = "19.0", git = "https://github.com/RequescoS/jsonrpc-response-middleware.git" }
schemars = "0.8"
tonic = "0.10"
tonic-build = "0.10"
prost = "0.12"
jsonrpc-core = { version = "19.0", git = "https://github.com/RequescoS/jsonrpc-response-middleware.git" }
axum = "0.6"


# Traits
async-trait = "0.1"
num-derive = "0.4"
num-traits = "0.2"


# Configuration, env-vars and cli parsing
figment = { version = "0.10", features = ["env", "toml", "yaml"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
dotenvy = "0.15"
indicatif = "0.17"

# Errors, futures, helpers, tools, time, etc...
# Errors
thiserror = { version = "1"}
anyhow = "1.0"
# Clients
arweave-rs = { version = "0.2", git = "https://github.com/RequescoS/arweave-rs.git", rev = "d8f5ef76f06c96afdf013fe5b62301790631b33f" }
reqwest = { version = "0.11", features = ["json", "stream"] }
coingecko = "1.0"
# Time
chrono = "0.4"
# Async and Sync
futures = "0.3"
futures-util = "0.3"
async-recursion = "1.1"
async-channel = "2.3"
stretto = { version = "0.8", features = ["async"] }
# Lazy
once_cell = "1.19"
lazy_static = "1.4"
# Strings
Inflector = "0.11"
heck = "0.5"
regex = "1.10"
# Web
url = "2.3"
mime_guess = "2.0.4"
# Other
num_cpus = "1.16"
itertools = "0.12"
jsonpath_lib = "0.3"
moka = { version = "0.12", features = ["future"] }

# Low level tools: FFI, hashing, encoding, random, etc...
libc = "0.2"
base64 = "0.21"
rand = "0.8"
bincode = "1.3"
hex = "0.4"
bs58 = "0.4"
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
jemallocator = { version = "*", features = ["profiling", "debug"] }


# Compression, zipping and files
lz4 = "1.24"
tar = "0.4"
csv = "1.3"
rustyline = "13.0"
tempfile = "3.8"
multer = "3.0"
zip-extract = "0.1"


# Solana ecosystem
solana-sdk = "~1.18"
solana-program = "~1.18"
solana-client = "~1.18"
solana-transaction-status = "~1.18"
solana-runtime = "~1.18"
solana-accounts-db = "~1.18"
solana-frozen-abi-macro = "~1.18"
spl-concurrent-merkle-tree = { version="0.4" }
spl-account-compression = { version="0.4", features = ["no-entrypoint"] }
solana-storage-bigtable = "~1.18"
solana-bigtable-connection = "1.10"
solana-storage-proto = "~1.18.11"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0", features = ["no-entrypoint"] }
spl-pod = "0.1.0"
solana-account-decoder = "~1.18.15"

# Anchor ecosystem
anchor-lang = "=0.30"

# Metaplex ecosystem

blockbuster = "2.4.0-beta.1"
mpl-bubblegum = { version = "2.0.0-beta.5", features = ["serde"] }

#blockbuster = { git = "https://github.com/metaplex-foundation/blockbuster", rev = "35a2e84" }
#mpl-bubblegum = { git = "https://github.com/metaplex-foundation/mpl-bubblegum.git", rev = "07678e6", features = ["serde"] }

mpl-token-metadata = "4.1.1"
libreplex_inscriptions = "0.5.1"


[profile.release]
lto = true
codegen-units = 1
