[package]
name = "backfill-rpc"
version = "0.6.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
entities = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-transaction-status = { workspace = true }
interface = { workspace = true }
tokio = { workspace = true }
plerkle_serialization = { workspace = true }
flatbuffers = { workspace = true }
tracing = { workspace = true }
usecase = { workspace = true }
tokio-retry = { workspace = true }

[features]
rpc_tests = []

[dev-dependencies]
serde_json = { workspace = true }
warp = { workspace = true }
