[package]
name = "backfill-rpc"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
entities = { path = "../entities" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-transaction-status = { workspace = true }
interface = { path = "../interface" }
tokio = { workspace = true }
plerkle_serialization = { workspace = true }
flatbuffers = { workspace = true }
tracing = { workspace = true }
usecase = { path = "../usecase" }
tokio-retry = { workspace = true }

[features]
rpc_tests = []

[dev-dependencies]
serde_json = { workspace = true }
warp = "0.3.7"
