[package]
name = "blockbuster"
description = "Metaplex canonical program parsers, for indexing, analytics etc...."
version = "1.0.1"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/blockbuster"
license = "AGPL-3.0"
edition = "2021"
readme = "../README.md"

[dependencies]
spl-account-compression = { version = "0.2.0", features = ["no-entrypoint"] }
spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
mpl-bubblegum = "1.2.0"
mpl-token-metadata = { version = "4.1.1", features = ["serde"] }
plerkle_serialization = { version = "1.6.0" }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
async-trait = "0.1.57"
bs58 = "0.4.0"
lazy_static = "1.4.0"
flatbuffers = "23.1.21"
borsh = "~0.10.3"
thiserror = "1.0.32"
solana-sdk = "~1.16.11"
anchor-lang = { version = "0.28.0"}
log = "0.4.17"
mpl-core = { version = "0.1.0", features = ["serde"] }

[dev-dependencies]
rand = "0.8.5"
spl-concurrent-merkle-tree = "0.2.0"
solana-client = "~1.16.11"
solana-transaction-status = "~1.16.11"
solana-geyser-plugin-interface = "~1.16.11"
serde_json="1.0.89"
