[package]
authors = ["Metaplex Developers <dev@metaplex.com>"]
description = "Metaplex canonical program parsers, for indexing, analytics etc...."
edition = "2021"
license = "AGPL-3.0"
name = "blockbuster"
readme = "../README.md"
repository = "https://github.com/metaplex-foundation/blockbuster"
version = "2.3.0"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
spl-token-2022 = { version = "1.0", features = ["no-entrypoint"] }
spl-account-compression = { version = "0.3.0", features = ["no-entrypoint"] }
spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
mpl-bubblegum = "1.2.0"
mpl-core = { version = "0.7.0", features = ["serde"] }
mpl-token-metadata = { version = "4.1.1", features = ["serde"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
async-trait = "0.1.57"
bs58 = "0.4.0"
lazy_static = "1.4.0"
borsh = "~0.10.3"
thiserror = "1.0.32"
log = "0.4.17"
solana-sdk = "1.17.16"
solana-transaction-status = "1.17.16"
spl-token-metadata-interface = "0.2.0"
spl-token-group-interface = "0.1.0"
spl-pod = { version = "0.1.0", features = ["serde-traits"] }
serde = "1.0.140"
solana-zk-token-sdk = "1.17.16"
anchor-lang = { version = "0.29.0" }

[dev-dependencies]
flatbuffers = "23.1.21"
plerkle_serialization = "1.8.0"
rand = "0.8.5"
serde_json = "1.0.89"
solana-client = "~1.17"
solana-geyser-plugin-interface = "~1.17"
spl-concurrent-merkle-tree = "0.2.0"