[package]
name = "consistency_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["env"] }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
solana-sdk = "~1.18.13"
solana-client = "~1.18.13"
solana-accounts-db = "1.18.13"
solana-runtime = "~1.18.13"
solana-frozen-abi-macro = "~1.18.13"
mpl-bubblegum = { workspace = true }
csv = { workspace = true}
tempfile = { workspace = true }
rocks-db = { path = "../rocks-db" }
metrics-utils = { path = "../metrics_utils" }
nft_ingester = { path = "../nft_ingester" }
spl-concurrent-merkle-tree = { version = "0.4.0" }
usecase = { path = "../usecase" }
indicatif = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
log = "0.4.17"
tar = "0.4.38"
zstd = "0.12.4"
memmap2 = "0.9.0"
thiserror = "1.0.31"
lazy_static = { workspace = true }

[[bin]]
name = "compressed_assets"

[[bin]]
name = "regular_assets"
