[package]
name = "consistency_check"
version = "0.6.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["env"] }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-accounts-db = { workspace = true }
solana-runtime = { workspace = true }
solana-frozen-abi-macro = { workspace = true }
mpl-bubblegum = { workspace = true }
csv = { workspace = true}
tempfile = { workspace = true }
rocks-db = { workspace = true }
metrics-utils = { workspace = true }
nft_ingester = { workspace = true }
spl-concurrent-merkle-tree = { workspace = true }
usecase = { workspace = true }
indicatif = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
entities = { workspace = true }
zstd = { workspace = true }
memmap2 = { workspace = true }

[[bin]]
name = "compressed_assets"

[[bin]]
name = "regular_assets"

[[bin]]
name = "jsons"
