[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
solana-sdk = { workspace = true }
num-derive = "0.4.1"
num-traits = "0.2.17"
schemars = "0.8.6"
serde_derive = { workspace = true }
serde_with = "3.7.0"
sqlx = { workspace = true }
solana-program = { workspace = true }
blockbuster = { git = "https://github.com/adm-metaex/blockbuster", branch = "feat/create-tree-with-root" }
sha2 = "0.10.0"
mpl-bubblegum = { workspace = true }
serde_json = { workspace = true }
spl-account-compression = { workspace = true }
solana-transaction-status = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
hex = "0.4.3"
