[package]
name = "entities"
version = "0.6.2-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
solana-sdk = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
schemars = { workspace = true }
serde_derive = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true }
solana-program = { workspace = true }
blockbuster = { workspace = true }
sha2 = { workspace = true }
mpl-bubblegum = { workspace = true }
serde_json = { workspace = true }
spl-account-compression = { workspace = true }
solana-transaction-status = { workspace = true }
base64 = { workspace = true }
mpl-token-metadata = { workspace = true }
libreplex_inscriptions = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
