[package]
name = "grpc"
version = "0.6.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
solana-sdk = { workspace = true }
interface = { path = "../interface" }
entities = { path = "../entities" }
async-trait = { workspace = true }
thiserror = { workspace = true }
solana-transaction-status = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }  # Corresponding build tool for tonic
