[package]
name = "integrity-verification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "1.0.56"
clap = { version = "4.4.14", features = ["derive"] }
config = { path = "../config" }
metrics-utils = { path = "../metrics_utils" }
tracing = "0.1.40"
env_logger = "0.10.1"