[package]
edition = "2021"
name = "integration_tests"
publish = false
version = "0.6.1-dev"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
entities = { workspace = true }
env_logger = { workspace = true }
flatbuffers = { workspace = true }
function_name = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
insta = { workspace = true, features = ["json"] }
interface = { workspace = true }
metrics-utils = { workspace = true }
mpl-token-metadata = { workspace = true }
nft_ingester = { workspace = true }
once_cell = { workspace = true }
plerkle_serialization = { workspace = true }
postgre-client = { workspace = true, features = ["integration_tests"] }
rocksdb = { workspace = true }
rocks-db = { workspace = true, features = ["integration_tests"] }
serde = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
sqlx = { workspace = true }
tempfile = {workspace = true}
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }
usecase = { workspace = true }