[package]
name = "integrity-verification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics-utils = { path = "../metrics_utils" }
usecase = { path = "../usecase" }
postgre-client = { path = "../postgre-client" }
entities = { path = "../entities" }
interface = { path = "../interface" }
tokio = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
env_logger = "0.10.1"
reqwest = { workspace = true }
figment = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
serde = { workspace = true }
dotenvy = "0.15.7"
rand = { workspace = true }
tokio-util = "0.7.10"
assert-json-diff = "2.0.2"
regex = "1.10.2"
async-trait = { workspace = true }
spl-account-compression = "0.3.0"
solana-client = { workspace = true }
solana-program = { workspace = true }
spl-concurrent-merkle-tree = "0.2.0"
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }

[features]
rpc_tests = []
bigtable_tests = []
