[package]
name = "integrity-verification"
version = "0.6.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics-utils = { workspace = true }
usecase = { workspace = true }
postgre-client = { workspace = true }
entities = { workspace = true }
interface = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
env_logger = { workspace = true }
reqwest = { workspace = true }
figment = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
tokio-util = { workspace = true }
assert-json-diff = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
spl-account-compression = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
spl-concurrent-merkle-tree = { workspace = true }
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }

[features]
rpc_tests = []
bigtable_tests = []
