[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
mockall = { workspace = true }
thiserror = { workspace = true }
entities = { path = "../entities" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
plerkle_serialization = { workspace = true }
solana-transaction-status = { workspace = true }
solana-storage-bigtable = { workspace = true }
solana-program = { workspace = true }
reqwest = { workspace = true }
anchor-lang = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
tokio = { workspace = true }
jsonrpc-core = { workspace = true }
bubblegum-batch-sdk = { workspace = true }
