[package]
name = "metrics-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus-client = "0.21.2"
hyper = {version = "0.14.23", features = ["server"]}
chrono = "0.4.19"
tokio = { version = "1.23.0" }
thiserror = "1.0.31"
log = "0.4.17"