[package]
name = "metrics-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus-client = "0.21.2"
hyper = {version = "0.14.23", features = ["server"]}
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }